Revert "Make titles in pdf footer lighter gray to offset"
This reverts commit dd1f3ac6f483e8922d1f5f4d289020bb744718af.

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -224,21 +224,13 @@ br.pdf-toc {
   @page footer:right {
     @bottom-left {
       font-style: normal;
-      color: cmyk(0,0,0,0.65);
     }
   }
-  @page footer:left {
-    @bottom-right {
-      color: cmyk(0,0,0,0.65);
-    }
-  }
-
   @page frontmatter:left {
     @bottom-right {
       content: string(papertitle);
       font-family: "Open Sans", sans-serif;
       font-size: 7.5pt;
-      color: cmyk(0,0,0,0.65);
     }
   }
 
@@ -253,7 +245,6 @@ br.pdf-toc {
       content: string(papertitle);
       font-family: "Open Sans", sans-serif;
       font-size: 7.5pt;
-      color: cmyk(0,0,0,0.65);
     }
   }
 
@@ -275,8 +266,7 @@ br.pdf-toc {
     @bottom-right {
       content: string(papertitle);
       font-family: "Open Sans", sans-serif;
-      font-size: 7.5pt;
-      color: cmyk(0,0,0,0.65); }
+      font-size: 7.5pt; }
   }
   @page footer-nosection:right {
     margin-bottom: 1in;
@@ -290,8 +280,7 @@ br.pdf-toc {
     @bottom-left {
       content: string(papernumber) string(papertitle);
       font-family: "Open Sans", sans-serif;
-      font-size: 7.5pt;
-      color: cmyk(0,0,0,0.65); }
+      font-size: 7.5pt; }
   }
   @page footer-nosection:right:first {
     @bottom-left {
