--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -534,7 +534,8 @@ br.pdf-toc {
 
   .quire-body-class--copyright .quire-page__content__main ul,
   .quire-body-class--copyright .quire-page__content__main p {
-    margin-right: 2.4375in;
+    /*margin-right: 2.4375in;*/
+    margin-right: 2.4in;
   }
 
   .quire-body-class--copyright .quire-page__content__main .logo-block,
@@ -554,19 +555,6 @@ br.pdf-toc {
   #copyright .logo-block p {
     margin-bottom: 0;
   }
-  #copyright .logo-block p:last-of-type {
-    margin-top: 1em;
-  }
-
-  #copyright .logo-block hr::after {
-    content: none;
-  }
-
-  #copyright .logo-block hr {
-    border: .25pt solid cmyk(0,0,0,0.65);
-    margin-right: .5in;
-  }
-
 
   .quire-body-class--copyright .quire-page__content__main ul:first-of-type {
     list-style-type: none;
