Add blank page before Contirbutors

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -368,7 +368,8 @@ br.pdf-toc {
     color: #fff;
   }
 
-  #posters-index::before {
+  #posters-index::before,
+  #contributors::before {
     content: "#";
     color: #fff;
   }
