remove unused logo andfix src url for cover

--- a/layouts/cover/single.html
+++ b/layouts/cover/single.html
@@ -2,7 +2,7 @@
 <div class="quire-cover__background">
   {{ if eq .Params.class "video" }}
   <div class="quire-cover__video-wrapper">
-    <video class="quire-cover__video" playsinline autoplay muted poster="cover_bg.jpg" id="bgvid">
+    <video class="quire-cover__video" playsinline autoplay muted poster="/assets/img/cover_bg.jpg" id="bgvid">
       <source src="/assets/img/cover_bg.mp4" type="video/mp4">
       <img src="/assets/img/cover_bg.jpg">
     </video>
@@ -45,7 +45,6 @@
       <p>Palazzo Reale, Milan, Italy, June 30–July 2, 2016</p>
     </div>
     <div class="quire-cover__inner__publisher quire-noscreen">
-      <img src="../assets/img/gettylogo.png" alt="Getty logo" class="quire-noprint" />
       <p>{{ if .Site.Data.publication.publisher }}<span>{{ range .Site.Data.publication.publisher }}<span class="quire-publisher">{{ .name }}</span>{{ end }}</span>{{ end }}<br />Los Angeles</p>
     </div>
   </div>
