Fix broken closing tag

--- a/themes/quire-prototype-starter-theme/layouts/_default/single.html
+++ b/themes/quire-prototype-starter-theme/layouts/_default/single.html
@@ -13,7 +13,7 @@
   <div class="quire-page__content">
     <section class="quire-page__content__main">
       {{ .Content }}
-    <section>
+    </section>
     {{ if eq .Params.contributor_byline "bottom" }}
       {{ partial "byline.html" . }}
     {{ end }}
