Update cover video
Closes issue #18

--- a/layouts/cover/single.html
+++ b/layouts/cover/single.html
@@ -2,7 +2,7 @@
 <div class="quire-cover__background">
   {{ if eq .Params.class "video" }}
   <div class="quire-cover__video-wrapper">
-    <video class="quire-cover__video" playsinline autoplay muted poster="/assets/img/cover_bg.jpg" id="bgvid">
+    <video class="quire-cover__video" playsinline autoplay muted loop poster="/assets/img/cover_bg.jpg" id="bgvid">
       <source src="/assets/img/cover_bg.mp4" type="video/mp4">
       <img src="/assets/img/cover_bg.jpg">
     </video>
