--- a/layouts/shortcodes/q-url-link.html
+++ b/layouts/shortcodes/q-url-link.html
@@ -1,3 +1,3 @@
 {{ $linkstep1 := replace .Inner "/" "&#8203;/"  }}
 {{ $link := replace $linkstep1 "&#8203;/&#8203;/" "//"}}
-<a href="{{ .Inner }}" class="quire-url-link">{{ $link | safeHTML }}</a>
+<a href="{{ .Inner }}" target="_blank" class="quire-url-link">{{ $link | safeHTML }}</a>
