--- a/themes/quire-starter-theme-alpha/layouts/_default/baseof.html
+++ b/themes/quire-starter-theme-alpha/layouts/_default/baseof.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     {{ .Hugo.Generator }}
-    <title>{{ if .Page.Params.short_title }}{{ .Page.Params.short_title | markdownify | plainify }}{{ else }}{{ .Title | markdownify | plainify }}{{ end }} || {{ .Site.Data.publication.title }}</title>
+    <title>{{ if ne .Page.Params.type "cover" }}{{ if .Page.Params.short_title }}{{ .Page.Params.short_title | markdownify | plainify }}{{ else }}{{ .Title | markdownify | plainify }}{{ end }} || {{ end }}{{ .Site.Data.publication.title }}</title>
     {{ partial "metadata.html" . }}
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}/assets/css/application.css">
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}/assets/css/custom.css">
+    {{- $css := "assets/css/application.css" | relURL -}}
+    {{- $customCSS := "assets/css/custom.css" | relURL -}}
+    <link rel="stylesheet" href="{{ $css }}">
+    <link rel="stylesheet" href="{{  $customCSS }}">
   </head>
   <body class="quire-body quire-body-type--{{ .Type }}{{ with .Params.layout }}--{{ . }}{{ end }}{{ with .Params.class }} quire-body-class--{{ . }}{{ end }}"
         id="{{ with .Section }}{{ . | urlize }}-{{ end }}{{ .File.BaseFileName | lower }}">
@@ -38,7 +40,8 @@
       {{ end }}
     </main>
     {{ partial "photoswipe.html" }}
-    <script src="{{ .Site.BaseURL }}/assets/js/application.js"></script>
+    {{- $js := "assets/js/application.js" | relURL -}}
+    <script src="{{ $js }}"></script>
     <script>
       (function() {
         var dynamic = document.querySelectorAll(".no-js");
